--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
 }
@@ -36,4 +41,3 @@
     transform: rotate(360deg);
   }
 }
-
